Fix a style issue where document-element covered partially by document action bar (#283)

--- a/packages/compass-crud/src/components/document-actions.less
+++ b/packages/compass-crud/src/components/document-actions.less
@@ -46,4 +46,10 @@
   &-left {
     float: left;
   }
+
+  &-left, &-right {
+    button {
+      z-index: 2;
+    }
+  }
 }
