--- a/packages/compass-crud/src/components/document-elements.less
+++ b/packages/compass-crud/src/components/document-elements.less
@@ -6,6 +6,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 100%;
+  z-index: 1;
 
   .line-number {
     position: absolute;
